Add API url + Text view border

--- a/app/src/main/res/layout/item_data.xml
+++ b/app/src/main/res/layout/item_data.xml
@@ -18,6 +18,8 @@
             android:id="@+id/data_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/textview_border"
+            android:textColor="#000000"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,7 +31,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            app:mutableText="@{viewModel.getDataBody()}"
+            app:mutableText="@{viewModel.getDataId()}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/data_name" />
