Add Splash screen + Material design

--- a/app/src/main/res/layout/activity_data_list.xml
+++ b/app/src/main/res/layout/activity_data_list.xml
@@ -6,7 +6,7 @@
             name="viewModel"
             type="com.example.kotlinapplication4a.ui.data.DataListViewModel" />
     </data>
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -19,7 +19,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/data_list"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -28,5 +28,5 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
