--- a/app/src/main/res/layout/item_data.xml
+++ b/app/src/main/res/layout/item_data.xml
@@ -7,44 +7,46 @@
         <variable
             name="viewModel"
             type="com.example.kotlinapplication4a.ui.data.DataViewModel" />
+        <variable
+            name="activity"
+            type="com.example.kotlinapplication4a.ui.data.DataListActivity"/>
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp">
+        android:layout_height="200dp"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="5dp"
+        >
 
-        <TextView
-            android:id="@+id/data_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/textview_border"
-            android:padding="10dp"
-            android:textColor="#000000"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:gravity="center"
-            app:mutableText="@{viewModel.getDataTitle()}" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/r1">
 
-        <TextView
-            android:id="@+id/data_id"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:textColor="#000000"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/data_name"
-            app:mutableText="@{viewModel.getDataId()}" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/iview"
+                app:imageUrl="@{viewModel.getDataImage}"
+                android:scaleType="centerCrop"/>
 
-        <Space
-            android:id="@+id/spacer"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/data_id" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22sp"
+                android:background="#4f0e0d0e"
+                android:textColor="@android:color/white"
+                android:layout_alignParentBottom="true"
+                android:id="@+id/tview"
+                android:gravity="center_horizontal"
+                app:mutableText="@{viewModel.getDataAuthor()}"/>
+
+        </RelativeLayout>
+
+
+    </com.google.android.material.card.MaterialCardView>
+
 </layout>
